<resources>
    <string name="app_name">NavigationShowCase</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_dashboard_detail">Dashboard Detail</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notification_detail">Notifications Detail</string>
    <string name="title_notification_add">Notifications Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>


    <string name="arg_counter">argCounter</string>
</resources>